@@ -2,6 +2,10 @@ Stable versions
 ---------------
 
 4.3.12 ():
+	Fix bugs caught in the OpenMPT test cases:
+	- fix IT note off with instrument
+	- fix IT note recover after cut
+	Other changes:
 	- fix IT pattern break in hexadecimal (reported by StarFox008)
 
 4.3.11 (20160212):
